# anki-to-obsidian

./: .gitignore  LICENSE  README.md  pyproject.toml
sync/: anki_html_parser.py  card_parser.py  diff.py  main.py
tests/: test_card_parser.py  test_sync.py
