[tool.poetry]
name = "anki-to-obsidian"
version = "0.1.0"
description = ""
authors = ["Anthony Crognale <anthony@bitsolar.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
pytest = "^8.2.2"
markdownify = "^0.12.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pre-commit = "^3.7.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests/*",
]

[tool.isort]
profile = "black"